--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -7,14 +7,14 @@
 
 <div id="project" data-magellan-target="project" class="pagewrap">
     <div class="xnarrowwrap left">
-        <h1 class="sectitle">Távol a család projekt</h1>
-        <h4>Hozzátartozók személyes történetei</h4>
+        <h1 class="sectitle">Otthon várunk</h1>
+        <h4>Személyes történetek hozzátartozóktól</h4>
     </div>
     <br>
     <div class="narrowwrap accentcopy">
-        <p>Kampányunk keretében személyes történeteknek adunk teret. Olyan emberek mesélnek, akiknek valamilyen közeli családtagja  - gyermeke, unokája, anyja, apja, párja - volt börtönben, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön valósága, ami elszakította őket szeretteiktől.</p>
-        <p>A  saját, személyes megéléseiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kommunikálni és hogyan érintette ez az időszak a kapcsolataikat. Mennyiben lehetetlenítette el a minőségi kapcsolattartást, hogy a világjárvány miatt több, mint egy éven át nem láthatták személyesen a szeretteiket.</p>
-        <p>Célunk, hogy a hozzátartozók és szabadult fogvatartottak személyes történeteinek erejével megmutassuk, hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt a fonalat, ami visszavezet a kinti életbe. A kinti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek. </p>
+        <p>Kampányunk keretében személyes történeteknek adunk teret. Az Otthon Várunk sorozatban emberek mesélik el történetüket, akiknek valamilyen közeli családtagja tölti szabadságvesztését, vagy ők maguk járták meg a börtönt. A történetek az életükről szólnak, amiben egy ideig jelen volt a börtön, ami elszakította őket egymástól.</p>
+        <p>A saját, személyes tapasztalataikat, élményeiket osztják meg velünk. Azt, hogy mi volt a legnehezebb az egymástól távol töltött időben, hogyan tudtak kapcsolatot tartani, úgy, hogy sokan közel két éve személyesen nem találkozhattak és érzelmileg vagy a gyakorlatban hogyan érintette őket a másik távolléte.</p>
+        <p>Célunk, hogy a hozzátartozók és szabadultak személyes történetein keresztül mutassuk meg, hogy a börtönök valósága nincs is olyan távol tőlünk, mint hinnénk. A minőségi kapcsolattartás jelenti azt az egyik legerősebb fonalat, ami visszavezet a kinti életbe. A családi, baráti kapcsolatok teszik lehetővé, hogy a börtönt megjárt emberek újra a társadalom tagjai lehessenek.</p>
     </div>
 </div>
 <hr class="piheno">
@@ -82,7 +82,7 @@
 <div class="pagewrap megabg">
     <div class="narrowwrap left">
     <h3 class="sectitle">Élet a rácsok mögött</h3>
-    <h4>Halgassa meg beszélgetésünket volt fogvatartottakkal</h4>
+    <h4>Szabadultak beszélgetése</h4>
     </div>
     <br>
     <div class="narrowwrap">
@@ -90,20 +90,15 @@
             <div class="cell large-6">
                 <blockquote>
                     „Bent senkit nem érdekel, hogy ezt ki ússza meg szellemileg épségben, senkit nem érdekel, ki milyen mentális állapotban szabadul. Ami egy picit is erőt adott, az a családom.”  
-                    <cite>János, 3 év 8 hónap után szabadult</cite>
+                    <cite>János, aki 3 év 8 hónap után szabadult</cite>
                 </blockquote>
                 <blockquote>
-                    „Az ember úgy képzeli el, hogy a szabadulás felhőtlen boldogság, de vannak árnyoldalai is. Nekem vissza kellett lassulnom, elengednem dolgokat, a felét annak, amit akarok, gondolok, tervezek.”
-                    <cite>Péter, 3 év 6 hónap után szabadult</cite>
+                    „Az ember úgy képzeli el, hogy a szabadulás felhőtlen boldogság. De vannak árnyoldalai is. Nekem vissza kellett lassulnom, elengednem dolgokat, a felét annak, amit akarok, gondolok, tervezek.”
+                    <cite>Péter, aki 3 év 6 hónap után szabadult</cite>
                 </blockquote>
             </div>
             <div class="cell large-6 accentcopy">
-                <p>A „Távol a család” projekt keretében két volt fogvatartottal beszélgetett Ónody-Molnár Dóra 
-                    a börtönben töltött mindennapokról, túlélési stratégiákról, a kapcsolattartás fontosságáról, 
-                    a koronavírus-járvány börtönéletre gyakorolt negatív hatásairól, a reintegrációs törekvések hiányosságairól, valamint arról, milyen érzés 
-                    volt évek múltán újra szabaddá válni, 
-                    szabadon élni.
-                    </p>
+                <p>Az „Otthon várunk!” projekt keretében két volt fogvatartottal beszélgetett Ónody-Molnár Dóra újságíró, a börtönben töltött mindennapokról, túlélési stratégiákról, a kapcsolattartás fontosságáról, a koronavírus-járvány börtönéletre gyakorolt negatív hatásairól, a reintegrációs törekvések hiányosságairól, valamint arról, milyen érzés volt évek múltán újra szabaddá válni, szabadon élni.</p>
             </div>
           </div>
             <hr class="fulldivider">
@@ -111,7 +106,7 @@
                 <iframe width="100%" height="20" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1204678576&color=%23ff5722&inverse=false&auto_play=false&show_user=false"></iframe>
             </div>
             <br>
-            <p style="text-align: center;"><a href="https://soundcloud.com/helsinkibizottsag/elet-a-racsok-mogott-hosszu" target="_blank" class="button accent expanded">Meghalgatom a vágatlan interjút<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
+            <p style="text-align: center;"><a href="https://soundcloud.com/helsinkibizottsag/elet-a-racsok-mogott-hosszu" target="_blank" class="button accent expanded">Meghallgatom a vágatlan interjút<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a></p>
 
     </div>
 </div>
@@ -121,7 +116,7 @@
         <h4>Beszámolók a kapcsolattartás nehézségeiről</h4>
     </div>
     <div class="anarrowwrap">
-    <section class="cardswiper" data-equalizer data-equalize-on="medium">
+    <section class="cardswiper" data-equalizer>
         <div>
             <article class="card card--short" data-equalizer-watch>
                 <h3 class="card__title">
@@ -175,8 +170,8 @@
     </div>
     <br>
     <div class="narrowwrap accentcopy">
-        <p>Szabadult fogvatartottakból, családtagjaikból, civilekből, a büntetés-végrehajtással foglalkozó szakemberekből álló hálózat. Ez a hálózat abban hisz, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni. Az emberséges börtönkörülmények között töltött szabadságvesztés, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a társadalomba történő sikeres visszailleszkedést. Az emberséges fogvatartás kiemelt figyelmet fordít a családdal való minőségi kapcsolattartásra.</p>
-        <p>A FECSKE azért jött létre, hogy a magyar börtön égető, és rendszerszintű problémáin együtt gondolkozhassanak a büntetés-végrehajtás által érintett csoportok tagjai. Hosszútávon egy önszerveződő mozgalom alapjait kívánjuk megteremteni és a fogvatartottak érdekképviseletének új formáit kialakítani. Célunk, hogy változzon a közvéleményben a fogvatartottakról kialakított kép. Legyen olyan platform, amin a fogvatartottak és családjuk nézőpontja is megjelenik.</p>
+        <p>A FECSKE a Fogvatartottakat és Családjukat Képviselő Csoport, szabadult fogvatartottakból, családtagjaikból, civilekből, a börtönnel foglalkozó szakemberekből álló hálózat. Abban hiszünk, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni, a fogvatartottak gyermekeinek, családtagjainak pedig a hozzátartozójukkal minőségi kapcsolatot tartani. Az emberséges börtönkörülmények, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a sikeres visszailleszkedést a társadalomba. A családdal való minőségi kapcsolattartás az emberséges bánásmód része.</p>
+        <p>A FECSKÉ-t azért hoztuk létre, hogy a magyar börtön égető és rendszerszintű problémáin együtt gondolkozhassanak az érintettek. Egy önszerveződő mozgalom alapjait teremtjük meg és kialakítjuk a fogvatartottak és családjuk érdekképviseletének új, hatékony formáit.</p>
         <br>
         <p><a href="https://fogvatartas.hu/" target="_blank" class="button large">A FECSKE weboldala</a></p>
     </div>
