--- a/src/pages/andrea.html
+++ b/src/pages/andrea.html
@@ -1,7 +1,7 @@
 <section class="mpt wide reverse" data-magellan>
     <div class="mpt__content indented">
-        <h2 class="b1">Andrea története</h2>
-        <p>„Lorem ipsum dolor sit amet. Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
+        <h2 class="b4">Andrea története</h2>
+        <p>„Miközben a férjem börtönben volt, akkor halt meg az édesanyja. Én szerettem volna közölni ezt vele személyesen, nagyjából nyugodt körülmények között. Ehhez képest ugyanúgy a soron következő látogatáson, tömegben és hangzavarban kellett elmondanom neki, hogy meghalt az édesanyja.”</p>
         <p>
             <a href="#videosection" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
         </p>
@@ -13,9 +13,10 @@
 
 <div class="pagewrap">
     <div class="twocolcopy">
-        <p>Andrea egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét. Több mint négy éven keresztül járt látogatni, nem volt egyetlen alkalom sem, amit kihagyott volna. Azzal igyekezett tartani a lelket L-ben, hogy újra és újra elmondta neki, hazavárja a szabadulása után.</p>
-        <p>Eközben sokszor érezte úgy, hogy túlságosan szigorúak és kegyetlenek a szabályok. Szinte elviselhetetlen volt számára, hogy semmilyen érintést nem engedtek meg közöttük, a plexifal bevezetése után pedig alig hallották egymást. Andrea nem hagyta ennyiben, orvosi igazolást szerzett arról, hogy rosszul hall, ezért végül engedélyezték számukra az elválasztó nélküli beszélőt. „Ha kitessékelnek az ajtón, bemászok az ablakon” – meséli magáról. Szeretné, ha történetével vigaszt nyújthatna más hozzátartozóknak, mert tudja, ebben az élethelyzetben csak kevesekre számíthat az ember.</p>
-        <p>L. négy és fél év után szabadult, Andrea pedig ígéretéhez híven befogadta és segítette őt az első lépések megtételében. L. sikeresen befejezte tanulmányait, ma már dolgozik, megházasodott, önálló életet él.</p>
+        <p>Andrea férje, L. több alkalommal került börtönbe, leghosszabb büntetése közel három év volt. Gyerekeik még kicsik voltak, amikor a szemük láttára bilincselték meg és vitték el az apukájukat, akinek a hiánya végigkísérte egész gyerekkorukat.</p>
+        <p>A börtönt nem érinti közvetlen buszjárat, járda nélküli földúton lehet csak megközelíteni több mint öt kilométer gyaloglással, a forró nyári és a hideg téli napokon egyaránt. Andrea szerint megviselte a gyerekeket, hogy egy rideg, drótkerítésekkel és rácsokkal körbevett, messzi helyre kellett elmenniük ahhoz, hogy az apjukkal találkozhassanak. A családnak egy egész napot igénybe vett az a procedúra, ami a legtöbbször 1-1,5 órás látogatásokhoz társult, ráadásul „katasztrofális volt minden egyes alkalom a hangzavartól.” Korábban legalább volt lehetőség a személyes érintkezésre, a találkozás elején és végén lehetett puszit adni egymásnak, a kisgyerekeket ölbe vehette az apjuk, de a plexifal bevezetésével ez is megszűnt.</p>
+        <p>Andrea hétről hétre harcolt azért, hogy a férje élhessen azokkal a jogaival, amik a fogvatartása ideje alatt is megillették őt. Amikor nem kapta meg időben a csomagját, Andrea napokon keresztül telefonált, a nevelővel szóváltásba is keveredett. A jogérvényesítés rengeteg időt, türelmet és energiát igényel, és tudja, nem minden hozzátartozó képes erre.</p>
+        <p>L. nem szeretne visszamenni többet, Andrea is belefáradt már az állandó hadakozásba. Bíznak abban, hogy végleg maguk mögött hagyhatják a börtönéveket.</p>
     </div>
 </div>
 
@@ -24,7 +25,7 @@
 <div id="videosection" class="pagewrap acoverbg" data-magellan-target="videosection">
     <div class="narrowwrap">
         <div class="responsive-embed widescreen">
-            <iframe src="https://www.youtube.com/embed/AQ2MQzyoE98" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/qLLElc9HqL0" title="Otthon várunk! | Andrea története" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </div>
