--- a/src/pages/etelka.html
+++ b/src/pages/etelka.html
@@ -1,7 +1,7 @@
 <section class="mpt wide" data-magellan>
     <div class="mpt__content indented">
         <br><br>
-        <h1>Etelka története</h1>
+        <h1 class="b3">Etelka története</h1>
         <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
         <p>
             <a href="#videosection" class="button">Megnézem a videót!<svg class="icon"><use xlink:href="#icon-play"></use></svg></a>
@@ -24,7 +24,7 @@
 <div id="videosection" class="pagewrap acoverbg" data-magellan-target="videosection">
     <div class="narrowwrap">
         <div class="responsive-embed widescreen">
-            <iframe src="https://www.youtube.com/watch?v=Yjbfc_CuT_U" title="Etelka története" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/Yjbfc_CuT_U" title="Etelka története" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
 </div>
