--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -19,17 +19,17 @@
 </div>
 <hr class="piheno">
 <div class="mptlist" id="stories" data-magellan-target="stories">
-    <section class="mpt wide reverse">
+    <section class="mpt reverse wide ">
         <div class="mpt__content indented">
-            <h2 class="b1">Andrea története</h2>
-            <p>„Lorem ipsum dolor sit amet. Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
+            <h2 class="b1">Luca története</h2>
+            <p>„Ott van a fejemben folyamatosan, hogy mi van vele, hiszen nagyon szeretem, és aggódom, aggódunk mindannyian érte. Minden napunkra, minden percünkre rányomja a bélyeget ez az érzés.”</p>
             <p>
-                <a href="{{root}}/andrea.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            <a href="{{root}}/luca.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="eaXAEowxOQg"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/andrea.jpg" alt="">
+            <button class="mpt__bg__play" data-youtubemodal="OS6G5Zw8XcQ"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <img src="{{root}}/assets/img/content/luca.jpg" alt="">
         </div>
     </section>
 
@@ -47,23 +47,9 @@
         </div>
     </section>
 
-    <section class="mpt reverse wide ">
-        <div class="mpt__content indented">
-            <h2 class="b3">Luca története</h2>
-            <p>„Ott van a fejemben folyamatosan, hogy mi van vele, hiszen nagyon szeretem, és aggódom, aggódunk mindannyian érte. Minden napunkra, minden percünkre rányomja a bélyeget ez az érzés.”</p>
-            <p>
-            <a href="{{root}}/luca.html" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
-            </p>
-        </div>
-        <div class="mpt__bg">
-            <button class="mpt__bg__play" data-youtubemodal="OS6G5Zw8XcQ"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/luca.jpg" alt="">
-        </div>
-    </section>
-
     <section class="mpt wide">
         <div class="mpt__content indented">
-            <h2 class="b4">Etelka története</h2>
+            <h2 class="b3">Etelka története</h2>
             <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
             <p>
                 <a href="{{root}}/etelka.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
@@ -72,6 +58,20 @@
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="Yjbfc_CuT_U"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
             <img src="{{root}}/assets/img/content/etelka.jpg" alt="">
+        </div>
+    </section>
+
+    <section class="mpt wide reverse">
+        <div class="mpt__content indented">
+            <h2 class="b4">Andrea története</h2>
+            <p>„Miközben a férjem börtönben volt, akkor halt meg az édesanyja. Én szerettem volna közölni ezt vele személyesen, nagyjából nyugodt körülmények között. Ehhez képest ugyanúgy a soron következő látogatáson, tömegben és hangzavarban kellett elmondanom neki, hogy meghalt az édesanyja.”</p>
+            <p>
+                <a href="{{root}}/andrea.html" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            </p>
+        </div>
+        <div class="mpt__bg">
+            <button class="mpt__bg__play" data-youtubemodal="qLLElc9HqL0"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+            <img src="{{root}}/assets/img/content/andrea.jpg" alt="">
         </div>
     </section>
 </div>
