--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -29,7 +29,7 @@
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="OS6G5Zw8XcQ"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/luca.jpg" alt="">
+            <img src="{{root}}assets/img/content/luca.jpg" alt="">
         </div>
     </section>
 
@@ -43,7 +43,7 @@
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="Zkda9RRfOZk"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/tunde.jpg" alt="">
+            <img src="{{root}}assets/img/content/tunde.jpg" alt="">
         </div>
     </section>
 
@@ -57,7 +57,7 @@
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="Yjbfc_CuT_U"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/etelka.jpg" alt="">
+            <img src="{{root}}assets/img/content/etelka.jpg" alt="">
         </div>
     </section>
 
@@ -71,7 +71,7 @@
         </div>
         <div class="mpt__bg">
             <button class="mpt__bg__play" data-youtubemodal="qLLElc9HqL0"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
-            <img src="{{root}}/assets/img/content/andrea.jpg" alt="">
+            <img src="{{root}}assets/img/content/andrea.jpg" alt="">
         </div>
     </section>
 </div>
