--- a/src/pages/luca/index.html
+++ b/src/pages/luca/index.html
@@ -8,7 +8,7 @@
         </p>
     </div>
     <div class="mpt__bg">
-        <img src="{{root}}/assets/img/content/luca.jpg" alt="Luca története">
+        <img src="{{root}}assets/img/content/luca.jpg" alt="Luca története">
     </div>
 </section>
 <div class="pagewrap">
