--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -24,7 +24,7 @@
             <h2 class="b1">Luca története</h2>
             <p>„Ott van a fejemben folyamatosan, hogy mi van vele, hiszen nagyon szeretem, és aggódom, aggódunk mindannyian érte. Minden napunkra, minden percünkre rányomja a bélyeget ez az érzés.”</p>
             <p>
-            <a href="{{root}}/luca/" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+            <a href="{{root}}luca/" class="button">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
@@ -38,7 +38,7 @@
             <h2 class="b2">Tünde története</h2>
             <p>„A kapcsolatunk eleinte még jó volt, könnyebben vissza tudott illeszkedni a családba is. De amikor már hosszabb éveket bent töltött, akkor nehezebb volt neki és nekünk is. Már nem ismerjük, nem ismerem őt.”</p>
             <p>
-                <a href="{{root}}/tunde/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <a href="{{root}}tunde/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
@@ -52,7 +52,7 @@
             <h2 class="b3">Etelka története</h2>
             <p>„Nagyon nehéz volt ez a jó pár év, de a lelkem mindig azt kívánta, hogy muszáj hozzá bemenni, kell, hogy legyen támasza.”</p>
             <p>
-                <a href="{{root}}/etelka/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <a href="{{root}}etelka/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
@@ -66,7 +66,7 @@
             <h2 class="b4">Andrea története</h2>
             <p>„Miközben a férjem börtönben volt, akkor halt meg az édesanyja. Én szerettem volna közölni ezt vele személyesen, nagyjából nyugodt körülmények között. Ehhez képest ugyanúgy a soron következő látogatáson, tömegben és hangzavarban kellett elmondanom neki, hogy meghalt az édesanyja.”</p>
             <p>
-                <a href="{{root}}/andrea/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
+                <a href="{{root}}andrea/" class="button accent">Teljes sztori itt<svg class="icon"><use xlink:href="#icon-openlink"></use></svg></a>
             </p>
         </div>
         <div class="mpt__bg">
