--- a/src/pages/andrea/index.html
+++ b/src/pages/andrea/index.html
@@ -1,3 +1,8 @@
+---
+title: "Andrea története - Otthon várunk"
+desc: "Andrea férje, L. több alkalommal került börtönbe, leghosszabb büntetése közel három év volt. Gyerekeik még kicsik voltak, amikor a szemük láttára bilincselték meg és vitték el az apukájukat, akinek a hiánya végigkísérte egész gyerekkorukat."
+ogimage: "assets/img/content/andrea.jpg"
+---
 <section class="mpt wide reverse" data-magellan>
     <div class="mpt__content indented">
         <h2 class="b4">Andrea története</h2>
