--- a/src/pages/etelka/index.html
+++ b/src/pages/etelka/index.html
@@ -1,3 +1,8 @@
+---
+title: "Etelka története - Otthon várunk"
+desc: "Etelka egyedül élő nyugdíjas, özvegy. Amikor kiderült számára, hogy egy közeli családtagjára, L-re szabadságvesztés vár, összetört. Nem tudta, meddig tart majd ez a „pokol”, egy dologban azonban a kezdetektől fogva biztos volt: mindenben és bármi áron támogatni fogja szerettét."
+ogimage: "assets/img/content/etelka.jpg"
+---
 <section class="mpt wide" data-magellan>
     <div class="mpt__content indented">
         <br><br>
