--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,3 +1,8 @@
+---
+title: "Otthon várunk - Személyes történetek hozzátartozóktól"
+desc: "Kampányunk keretében személyes történeteknek adunk teret. Az Otthon Várunk sorozatban emberek mesélik el történetüket, akiknek valamilyen közeli családtagja tölti szabadságvesztését, vagy ők maguk járták meg a börtönt."
+ogimage: "assets/img/content/hazasparkutyaval.jpg"
+---
 <div class="hero">
     <img class="hero__bg" src="{{root}}assets/img/content/hazasparkutyaval.jpg" alt="Otthon várunk!">
     <div class="hero__content">
