--- a/src/pages/luca/index.html
+++ b/src/pages/luca/index.html
@@ -1,3 +1,8 @@
+---
+title: "Luca története - Otthon várunk"
+desc: "Luca fiatal, két gyermekes anyuka, akinek egy közeli hozzátartozóját ítélték két év letöltendő börtönbüntetésre. A bevonulást megelőzően az egész család tanácstalan volt, nem voltak korábban ilyen helyzetben, nem tudták mi a teendő."
+ogimage: "assets/img/content/luca.jpg"
+---
 <section class="mpt reverse wide" data-magellan>
     <div class="mpt__content indented">
         <br><br>
