--- a/src/pages/tunde/index.html
+++ b/src/pages/tunde/index.html
@@ -1,3 +1,8 @@
+---
+title: "Tünde története - Otthon várunk"
+desc: "Tünde egy tizenegy gyermekes családban nőtt fel a fővárostól 40 kilométerre fekvő bagi szegregátumban, és bár már évek óta Budapesten él párjával, dolgozni mai napig visszajár a szülőfalujába."
+ogimage: "assets/img/content/tunde.jpg"
+---
 <section class="mpt wide" data-magellan>
     <div class="mpt__content indented">
         <br><br>
