--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -168,19 +168,24 @@ ogimage: "assets/img/content/hazasparkutyaval.jpg"
 </div>
 {{>lettermodals}}
 <hr class="piheno">
-<section id="aboutus" class="pagewrap" data-magellan-target="aboutus">
-    <div class="xnarrowwrap left">
+<br><br><br>
+<section id="aboutus" class="mpt noborder" data-magellan-target="aboutus">
+    <div class="mpt__content">
         <h1 class="sectitle">FECSKE</h1>
         <h4>Fogvatartottakat és Családjukat Képviselő Csoport</h4>
-    </div>
-    <br>
-    <div class="narrowwrap accentcopy">
-        <p>A FECSKE a Fogvatartottakat és Családjukat Képviselő Csoport, szabadult fogvatartottakból, családtagjaikból, civilekből, a börtönnel foglalkozó szakemberekből álló hálózat. Abban hiszünk, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni, a fogvatartottak gyermekeinek, családtagjainak pedig a hozzátartozójukkal minőségi kapcsolatot tartani. Az emberséges börtönkörülmények, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a sikeres visszailleszkedést a társadalomba. A családdal való minőségi kapcsolattartás az emberséges bánásmód része.</p>
+        <p>A FECSKE a <a href="https://fogvatartas.hu/">Fogvatartottakat és Családjukat Képviselő Csoport,</a> szabadult fogvatartottakból, családtagjaikból, civilekből, a börtönnel foglalkozó szakemberekből álló hálózat. Abban hiszünk, hogy mindenkinek joga van a szabadságvesztés büntetését emberséges körülmények között tölteni, a fogvatartottak gyermekeinek, családtagjainak pedig a hozzátartozójukkal minőségi kapcsolatot tartani. Az emberséges börtönkörülmények, a szociális szolgáltatások segítik a szabadulás utáni talpra állást, a sikeres visszailleszkedést a társadalomba. A családdal való minőségi kapcsolattartás az emberséges bánásmód része.</p>
         <p>A FECSKÉ-t azért hoztuk létre, hogy a magyar börtön égető és rendszerszintű problémáin együtt gondolkozhassanak az érintettek. Egy önszerveződő mozgalom alapjait teremtjük meg és kialakítjuk a fogvatartottak és családjuk érdekképviseletének új, hatékony formáit.</p>
         <br>
-        <p><a href="https://fogvatartas.hu/" target="_blank" class="button large">A FECSKE weboldala</a></p>
+        <p><button class="button large secondary" data-youtubemodal="NiylLM5lRdw">Megnézem a kampányfilmet<svg class="icon"><use xlink:href="#icon-play"></use></svg></button></p>
+    </div>
+    <div class="mpt__media">
+    <figure class="mpt__fig">
+        <button class="mpt__fig__play" data-youtubemodal="NiylLM5lRdw"><svg class="icon"><use xlink:href="#icon-play"></use></svg></button>
+        <img src="{{root}}assets/img/content/fecskevideocover.jpg" alt="">
+    </figure>
     </div>
 </section>
+<br><br><br>
 <hr class="piheno">
 <div class="pagewrap nobottom"></div>
 
