--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -153,6 +153,20 @@ ogimage: "assets/img/content/hazasparkutyaval.jpg"
         <div>
             <article class="card card--short secondary" data-equalizer-watch>
                 <h3 class="card__title">
+                    Alexandra története
+                </h3>
+                <div class="card__excerpt">
+                    <p>Alexandra leveléből kiderül, milyen kiszolgáltatott helyzetbe kerülhet egy anya, amikor a másik szülő a börtönbüntetése alatt nem tudja kivenni a részét a családfenntartásból.</p>
+                    <p><em>“Mindent én intézek a férjemnek és mindent megpróbáltunk már hátha hamarabb kijöhet, de ez csak egy álom volt. 1.5 éve bent van, minden nap egy küzdelem számomra és még van 1 év hátra.”</em></p>
+                </div>
+                <div class="card__actions">
+                    <button data-open="letter-alexandra-modal" class="button">Elolvasom</button>
+                </div>
+            </article>
+        </div>
+        <div>
+            <article class="card card--short accent" data-equalizer-watch>
+                <h3 class="card__title">
                     A Te történeted
                 </h3>
                 <div class="card__excerpt">
