--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -165,6 +165,20 @@ ogimage: "assets/img/content/hazasparkutyaval.jpg"
             </article>
         </div>
         <div>
+            <article class="card card--short" data-equalizer-watch>
+                <h3 class="card__title">
+                    Zsuzsanna története
+                </h3>
+                <div class="card__excerpt">
+                    <p>Ha börtönbe kerül a férjed, és a gyerekeid csak rád számíthatnak, különösen nehéz még arról is gondoskodni, hogy legyen elég pénz kifizetni a méregdrága börtöntelefondíjakat.</p>
+                    <p><em>“Iszonyatosan nehéz volt a kezdeti időszak, már most valamivel könnyebb, bár őt is finanszírozni, hogy legalább hívni tudjon minket nem egyszerű, de sajnos nem tehetem meg azt, hogy nem küldök neki pénzt, mert a 11 éves kislánya azt már nem tudná elviselni, ha nem beszélhetne vele.”</em></p>
+                </div>
+                <div class="card__actions">
+                    <button data-open="letter-zsuzsanna-modal" class="button accent">Elolvasom</button>
+                </div>
+            </article>
+        </div>
+        <div>
             <article class="card card--short accent" data-equalizer-watch>
                 <h3 class="card__title">
                     A Te történeted
